[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pineapple-pager-api"
version = "0.1.0"
description = "Python API for the Hak5 WiFi Pineapple Pager"
authors = [{ name="tpollard64" }]
license = { text = "Apache-2.0" }
dependencies = ["paramiko>=3.4.0"]
