[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pineapple-pager-api"
version = "0.1.0"
description = "Python library for interacting with Pineapple Pager devices"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name="tpollard64" }
]
dependencies = ["paramiko"]
